# django-seedkit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/seedkit/: __init__.py  apps.py  config.py  discovery.py  helpers.py  runner.py
src/seedkit/management/commands/: seeddata.py
tests/: settings.py  test_config.py  test_discovery.py  test_helpers.py  test_runner.py
